--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "react-modal-component-hw",
     "version": "1.0.2",
     "private": false,
-    "description": "A simple and customizable modal window component for React applications, compatible with Tailwind CSS, allowing easy management of modal windows with styling options.",
+    "description": "A simple, modular and customizable modal window component for React applications, compatible with Tailwind CSS, allowing easy management of modal windows with styling options.",
     "author": "Aeonshad",
+    "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/aeonshad/react-modal-component-hw"
@@ -24,7 +25,8 @@
         "user interface",
         "popup",
         "dialog",
-        "tailwind"
+        "tailwind",
+        "modular"
     ],
     "dependencies": {
         "clsx": "^2.1.1",
