--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "lucide-react": "^0.446.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-modal-component-hw": "^1.0.4",
         "react-scripts": "5.0.1"
     },
     "scripts": {
@@ -66,4 +67,3 @@
         "@babel/preset-env": "^7.25.4"
     }
 }
-
