--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "type": "git",
         "url": "https://github.com/aeonshad/react-modal-component-hw"
     },
+    "homepage": "http:/aeonshad.github.io/react-modal-component-hw",
     "main": "dist/Modal.js",
     "files": [
         "dist/*"
@@ -39,9 +40,12 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "NODE_ENV=production babel src/components --out-dir dist --copy-files",
+        "dist": "NODE_ENV=production babel src/components --out-dir dist --copy-files",
+        "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -64,6 +68,7 @@
     "devDependencies": {
         "@babel/cli": "^7.25.6",
         "@babel/core": "^7.25.2",
-        "@babel/preset-env": "^7.25.4"
+        "@babel/preset-env": "^7.25.4",
+        "gh-pages": "^6.1.1"
     }
 }
